# royal

./: CardanoHandler.py  README.md  scenarios.py  utils.py
bash/: generate-key.sh  node-state.sh  pkh.sh  run-node.sh  script-address.sh  send-to-script.sh  send-transaction.sh  wallet-info.sh
data/: info.json
haskell/: hie.yaml  royal.cabal
haskell/app/: compile.hs
haskell/data/: ds.json
haskell/src/: Distributor.hs  Utils.hs
haskell/src/Distributor/: OffChain.hs  OnChain.hs
haskell/test/: Spec.hs
haskell/test/Spec/: Example.hs  Help.hs  Run.hs  Sample.hs  Test.hs  Trace.hs
scripts/: fifth_case.plutus  first_case.plutus  third_case.plutus
