Cabal-Version:      2.4
Name:               royal
Version:            0.1.0.0
Author:             Mateus Santos
Maintainer:         Mateus Santos
Build-Type:         Simple
Copyright:          © 2021 Mateus Santos
License:            MIT
License-files:      LICENSE

library
  hs-source-dirs:      src, test
  exposed-modules:     Distributor
                     , Distributor.OnChain
                     , Distributor.OffChain
                     , Spec.Sample
                     , Spec.Help
                     , Utils
  build-depends:       aeson -any
                     , base ^>=4.14.1.0
                     , bytestring -any
                     , containers -any
                     , cryptonite
                     , data-default -any
                     , freer-extras
                     , lens
                     , playground-common
                     , cardano-api
                     , plutus-contract
                     , plutus-ledger
                     , plutus-ledger-api
                     , plutus-chain-index
                     , plutus-tx-plugin
                     , plutus-tx
                     , plutus-use-cases
                     , prettyprinter
                     , QuickCheck
                     , HUnit
                     , tasty
                     , tasty-quickcheck
                     , text
  default-language:    Haskell2010
  ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise

executable build-script
  main-is: compile.hs
  hs-source-dirs:      app
  ghc-options:         -Wall -threaded
  build-depends:       cardano-api
                     , cardano-ledger-alonzo
                     , plutus-ledger
                     , plutus-ledger-api
                     , plutus-tx
                     , serialise
                     , aeson
                     , royal
                     , bytestring
                     , base ^>=4.14.1.0

test-suite royal-tests
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  other-modules:       Spec.Example
                     , Spec.Run
                     , Spec.Sample
                     , Spec.Trace
                     , Spec.Test
  default-language: Haskell2010
  ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
  build-depends:       base ^>=4.14.1.0
                     , aeson
                     , containers
                     , data-default
                     , freer-extras
                     , lens
                     , bytestring
                     , cardano-api
                     , plutus-contract
                     , plutus-ledger
                     , royal
                     , plutus-tx
                     , QuickCheck
                     , HUnit
                     , tasty
                     , tasty-quickcheck
                     , text
  if !(impl(ghcjs) || os(ghcjs))
    build-depends: plutus-tx-plugin -any